# mini_crm

./: .gitignore  build.sh  package-lock.json  package.json  pyproject.toml  requirements.txt
api/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_alter_team_name.py  0003_alter_team_manager_alter_team_supervisor.py
core/: settings.py
frontend/: .env.production  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  layout.tsx
frontend/src/api/: auth.ts  client.ts  contacts.ts  tasks.ts
frontend/src/components/: AuthenticatedLayout.tsx  Button.tsx  ContactFilters.tsx  ContactForm.tsx  ContactTable.tsx  EditContactForm.tsx  Pagination.tsx  ProtectedRoute.tsx  TaskFilters.tsx  TaskForm.tsx  TaskList.tsx  TaskStatusHistorySection.tsx  TaskTable.tsx  TeamDetails.tsx  TeamForm.tsx
frontend/src/contexts/: RoleContext.tsx
frontend/src/pages/: AssignTaskPage.tsx  ContactDetailsPage.tsx  ContactsPage.tsx  HomePage.tsx  LoginPage.tsx  ProfilePage.tsx  SignupPage.tsx  TaskDetails.tsx  TasksPage.tsx
frontend/src/types/: contact.ts  role.ts  task.ts
